[package]
name = "backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_TaskScheduler", 
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Ole"
]